@@ -2,18 +2,19 @@ package com.hostel.ordering.service;
 
 import com.hostel.ordering.model.MenuItem;
 import com.hostel.ordering.repository.MenuItemRepository;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.util.Comparator;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class MenuItemService {
 
-    @Autowired
-    private MenuItemRepository menuItemRepository;
+    private final MenuItemRepository menuItemRepository;
+
+    public MenuItemService(MenuItemRepository menuItemRepository) {
+        this.menuItemRepository = menuItemRepository;
+    }
 
     public MenuItem createMenuItem(MenuItem menuItem) {
         menuItem.setCreatedAt(System.currentTimeMillis());
@@ -22,8 +23,7 @@ public class MenuItemService {
     }
 
     public MenuItem getMenuItem(String id) {
-        Optional<MenuItem> menuItem = menuItemRepository.findById(id);
-        return menuItem.orElse(null);
+        return menuItemRepository.findById(id).orElse(null);
     }
 
     public List<MenuItem> getAllMenuItems() {
@@ -31,31 +31,19 @@ public class MenuItemService {
     }
 
     public List<MenuItem> getAvailableMenuItems(String category, String sort) {
-        List<MenuItem> items;
+        List<MenuItem> items = (category != null && !category.isBlank())
+                ? menuItemRepository.findByAvailableTrueAndCategoryOrderByNameAsc(category)
+                : menuItemRepository.findByAvailableTrueOrderByNameAsc();
 
-        if (category != null && !category.isEmpty()) {
-            items = menuItemRepository.findByAvailableTrueAndCategoryOrderByNameAsc(category);
-        } else {
-            items = menuItemRepository.findByAvailableTrueOrderByNameAsc();
-        }
-
-        // Apply sort
         if (sort != null) {
-            switch (sort) {
-                case "price_asc":
-                    items = items.stream().sorted((a, b) -> Double.compare(a.getPrice(), b.getPrice()))
-                            .collect(Collectors.toList());
-                    break;
-                case "price_desc":
-                    items = items.stream().sorted((a, b) -> Double.compare(b.getPrice(), a.getPrice()))
-                            .collect(Collectors.toList());
-                    break;
-                case "newest":
-                    items = items.stream().sorted((a, b) -> Long.compare(b.getCreatedAt(), a.getCreatedAt()))
-                            .collect(Collectors.toList());
-                    break;
-                default: // name_asc - already sorted
-                    break;
+            Comparator<MenuItem> comparator = switch (sort) {
+                case "price_asc" -> Comparator.comparingDouble(MenuItem::getPrice);
+                case "price_desc" -> Comparator.comparingDouble(MenuItem::getPrice).reversed();
+                case "newest" -> Comparator.comparingLong(MenuItem::getCreatedAt).reversed();
+                default -> null;
+            };
+            if (comparator != null) {
+                return items.stream().sorted(comparator).toList();
             }
         }
 
@@ -70,28 +58,17 @@ public class MenuItemService {
     }
 
     public MenuItem updateMenuItem(String id, MenuItem menuItem) {
-        Optional<MenuItem> optionalMenuItem = menuItemRepository.findById(id);
-
-        if (optionalMenuItem.isPresent()) {
-            MenuItem existingMenuItem = optionalMenuItem.get();
-
-            if (menuItem.getName() != null)
-                existingMenuItem.setName(menuItem.getName());
-            if (menuItem.getDescription() != null)
-                existingMenuItem.setDescription(menuItem.getDescription());
-            if (menuItem.getPrice() != null)
-                existingMenuItem.setPrice(menuItem.getPrice());
-            if (menuItem.getCategory() != null)
-                existingMenuItem.setCategory(menuItem.getCategory());
-            if (menuItem.getAvailable() != null)
-                existingMenuItem.setAvailable(menuItem.getAvailable());
-
-            existingMenuItem.setUpdatedAt(System.currentTimeMillis());
-
-            return menuItemRepository.save(existingMenuItem);
-        }
-
-        return null;
+        return menuItemRepository.findById(id)
+                .map(existing -> {
+                    if (menuItem.getName() != null) existing.setName(menuItem.getName());
+                    if (menuItem.getDescription() != null) existing.setDescription(menuItem.getDescription());
+                    if (menuItem.getPrice() != null) existing.setPrice(menuItem.getPrice());
+                    if (menuItem.getCategory() != null) existing.setCategory(menuItem.getCategory());
+                    if (menuItem.getAvailable() != null) existing.setAvailable(menuItem.getAvailable());
+                    existing.setUpdatedAt(System.currentTimeMillis());
+                    return menuItemRepository.save(existing);
+                })
+                .orElse(null);
     }
 
     public void deleteMenuItem(String id) {
